force-app/main/default/src/objects/PJN_Enrollment_Wizard_Record_Form__mdt/PJN_Enrollment_Wizard_Record_Form__mdt.object-meta.xml
<CustomObject>
    <description>App: Patient Journey Navigator
Impacted Functionality: Enrollment Wizard
Purpose: Define the object to be presented on the Enrollment Wizard Form component. This is step 4 in setting up the Enrollment Wizard.
Metadata Relationship(s): Enrollment Wizard Component
Created by Mavens: Yes</description>
    <label>Enrollment Wizard Record Form</label>
    <pluralLabel>Enrollment Wizard Record Forms</pluralLabel>
</CustomObject>