force-app/main/default/src/objects/PJN_Enrollment_Wizard_Record_Form__mdt/fields/PJN_Care_Plan_Lookup_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Care_Plan_Lookup_Field_API_Name__c</fullName>
    <label>Care Plan Lookup Field API Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>