force-app/main/default/src/objects/PJN_Enrollment_Wizard_Record_Form__mdt/fields/PJN_Edit_Care_Plan_Record_Form__c.field-meta.xml
<CustomField>
    <fullName>PJN_Edit_Care_Plan_Record_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tells if the form is defined to edit current care plan record</description>
    <inlineHelpText>Tells if the form is defined to edit current care plan record</inlineHelpText>
    <label>Edit Care Plan Record Form</label>
    <type>Checkbox</type>
</CustomField>