force-app/main/default/src/objects/PJN_Enrollment_Wizard_Record_Form__mdt/fields/PJN_RecordType_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>PJN_RecordType_DeveloperName__c</fullName>
    <label>RecordType DeveloperName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>