force-app/main/default/src/objects/PJN_Enrollment_Wizard_Record_Form__mdt/listViews/PJN_All_Enrollment_Wizard_Record_Forms.listView-meta.xml
<ListView>
    <fullName>PJN_All_Enrollment_Wizard_Record_Forms</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PJN_Care_Plan_Lookup_Field_API_Name__c</columns>
    <columns>PJN_Edit_Care_Plan_Record_Form__c</columns>
    <columns>PJN_Enrollment_Wizard_Component__c</columns>
    <columns>PJN_RecordType_DeveloperName__c</columns>
    <columns>PJN_SObject_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Enrollment Wizard Record Forms</label>
    <language>en_US</language>
</ListView>